--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "webpack-dev-server": "2.9.7"
   },
   "dependencies": {
-    "font-awesome": "^4.7.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0"
   }
 }
