--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
     "webpack-dev-server": "2.9.7"
   },
   "dependencies": {
+    "prop-types": "15.6.0",
+    "rc-pagination": "3.1.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "simditor": "2.3.1"
   }
 }
