--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "repository": "git@github.com:szjSmiling/react-admin-shop.git",
   "scripts": {
     "dev": "node_modules/.bin/webpack-dev-server",
-    "dist": "node_modules/.bin/webpack"
+    "dist": "set WEBPACK_ENV=online&& node_modules/.bin/webpack -p"
   },
   "devDependencies": {
     "babel-core": "6.26.0",
